# convo-recall

./: .gitignore  ACCEPTABLE_USE.md  CHANGELOG.md  CITATION.cff  CLA.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: claude.yml  publish.yml  test.yml
docs/: PLAN-followup.md  PLAN-linux-port.md  TECH_DEBT.md
docs/feedback/: 2026-04-30-claude-sandbox.md  2026-05-02-sandbox-phase1.md
docs/plans/local/: A-refactor-extraction.md  B1-polling-scheduler.md  B2-systemd-scheduler.md  B3-cron-scheduler.md  B4-wizard-factory-rewire.md  C-validation-polish.md  README.md
docs/plans/local/td-008/: A1-identity.md  A2-db.md  A3-embed.md  A4-query.md  A5-backfill.md  A6-admin.md  A7-ingest-subpackage.md  A8-shim-and-release.md  README.md  shim-surface.txt
docs/plans/local/td-008/baseline/: doctor.txt  search.json  stats.txt  tail.json
src/convo_recall/: __init__.py  _progress.py  _spinner.py  admin.py  backfill.py  cli.py  db.py  embed.py  embed_service.py  identity.py  ingest.py  install.py  query.py  redact.py
src/convo_recall/hooks/: conversation-ingest.sh  conversation-memory.sh
src/convo_recall/ingest/: __init__.py  claude.py  codex.py  gemini.py  scan.py  writer.py
src/convo_recall/install/: __init__.py  _hooks.py  _paths.py  _wizard.py
src/convo_recall/install/schedulers/: __init__.py  base.py  cron.py  launchd.py  polling.py  systemd.py
tests/: integrity_sweep.md  integrity_sweep.py  sandbox-e2e-full.sh  sandbox-hooks-e2e.sh  sandbox-linux-port-e2e.sh  sandbox-multi-agent.sh  sandbox-results.ndjson  sandbox-test.sh  test_backfill_safety.py  test_changelog.py  test_cli_cwd_flag.py  test_cli_flags.py  test_conversation_memory_md_recipes.py  test_hook_auto_ingest.sh  test_hook_auto_search.sh  test_hook_instructions.sh  test_hook_silent_stdout.py  test_hook_throttle.sh  test_hooks_extraction.py  test_ingest.py  test_ingest_docstring_truth.py  test_ingest_project_id.py  test_install_paths.py  test_install_public_api.py  test_install_wizard.py  test_launchd_scheduler.py  test_migration_project_id.py  test_packaging_metadata.py  test_progress.py  test_project_id.py  test_readme_metadata.py  test_safety_cli.py  test_scheduler_base.py  test_scheduler_factory.py  test_schedulers.py  test_search_tail_resolution.py  test_spinner.py  test_tail.py  test_uninstall_walks_all_tiers.py  test_unwire_hook_orphans.py  (+3 more)
tests/fixtures/: .gitignore
