[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convo-recall"
version = "0.3.6"
description = "Searchable memory for AI coding-agent sessions (Claude/Gemini/Codex) — FTS5 + vector hybrid search"
readme = "README.md"
requires-python = ">=3.11"
# PolyForm Noncommercial 1.0.0 — modified by the licensor to also exclude
# (a) any government use, and (b) any military, defense, weapons, intelligence,
# or mass-surveillance use. Source-available; permits personal, educational,
# research, charitable, and public-research use only. Commercial use,
# including embedding as a dependency in commercial software, is NOT
# permitted. The "convo-recall" qualifier on the LicenseRef signals this is
# the licensor-modified variant, not the unmodified PolyForm-NC. Per PEP 639,
# `license-files` declares the file that ships in the wheel/sdist.
license = "LicenseRef-FSL-1.1-Apache-2.0"
license-files = ["LICENSE", "ACCEPTABLE_USE.md", "NOTICE"]
authors = [
    {name = "Ahed Isir"},
]
keywords = ["claude", "claude-code", "gemini", "codex", "search", "memory", "rag", "sqlite", "fts5"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    # "Other/Proprietary License" is the canonical PyPI classifier for
    # source-available / non-OSI licenses (avoids falsely claiming OSI status).
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "apsw>=3.46",
    "sqlite-vec>=0.1.6,<0.2",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
    "torch>=2.2,<3",
    # aiohttp <3.10.11 has CVE-2024-52304 (request smuggling). Floor here
    # picks up the patched line; upper bound left open since 3.x is API-stable.
    "aiohttp>=3.10.11",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pexpect>=4.9",
    "pyyaml>=6.0",
]

[project.scripts]
recall = "convo_recall.cli:main"

[project.urls]
Homepage = "https://github.com/ahed-isir/convo-recall"
Repository = "https://github.com/ahed-isir/convo-recall"
Issues = "https://github.com/ahed-isir/convo-recall/issues"
Changelog = "https://github.com/ahed-isir/convo-recall/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/convo_recall"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/fixtures/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
